fecth dos pedidos